--- a/statistical-power-for-zero-inflated-data.Rmd
+++ b/statistical-power-for-zero-inflated-data.Rmd
@@ -14,6 +14,8 @@ source("functions.R")
 
 # TLDR
 
+Clearly define how your product innovations will bring value to customers. Do they **create new value** for customers that currently don't get much value from the existing product? Do they **double down**, imroving existing value that you already bring to customers? Having a clear undertanding of the value you aim to create not only brings clearer production direction and helps you know if you are being successful, but it allows you to identify when you can run much **shorter experiments**. 
+
 If you can measure the value your product brings to customers in terms of **either or events** (either customers use Search for two or more days in seven or they don't) then you can **cut your experimentation runtime** (up to 60%). Running faster experiments will increase the speed you learn about your product ideas. The faster you learn about the impact of your product ideas, the **faster you will be successful**.
 
 # Know our customers to know your product opportunities and define your success
